[gd_scene load_steps=6 format=1]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://crosshair.gd" type="Script" id=3]
[ext_resource path="res://Crosshair.tex" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 8.82043, 9.79735 )

[node name="Root" type="Node2D"]

[node name="player" type="KinematicBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 3.14409, 0, 0, 2.96143, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="playerSprite" type="Sprite" parent="player"]

editor/display_folded = true
texture = ExtResource( 2 )

[node name="bulletSpawnPoint" type="Position2D" parent="player/playerSprite"]

transform/pos = Vector2( 0, 45 )

[node name="hookSpawnPoint" type="Position2D" parent="player/playerSprite"]

[node name="playerCollisionShape" type="CollisionShape2D" parent="player"]

transform/scale = Vector2( 3.14409, 2.96143 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Camera2D" type="Camera2D" parent="player"]

offset = Vector2( 0, -100 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 2, 2 )
limit/left = -1000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.0
drag_margin/top = 0.0
drag_margin/right = 0.0
drag_margin/bottom = 0.0

[node name="timerHolder" type="Node" parent="player"]

editor/display_folded = true

[node name="shootTimer" type="Timer" parent="player/timerHolder"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="bulletsHolder" type="Node" parent="player"]

[node name="crossHair" type="Node2D" parent="."]

script/script = ExtResource( 3 )

[node name="crossHairSprite" type="Sprite" parent="crossHair"]

transform/scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )
flip_h = true
flip_v = true
modulate = Color( 1, 0, 0, 1 )


